--- a/app/src/main/res/layout/activity_practical_test01_main.xml
+++ b/app/src/main/res/layout/activity_practical_test01_main.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:id="@+id/practicaltest01"
     android:padding="0dp">
 
     <!-- ID FOARTE IMPORTANT PENTRU RECUNOASTERE -->
